[package]
name = "sgf-parse"
version = "3.1.2"
edition = "2018"
authors = ["Julian Andrews <jandrews271@gmail.com>"]
license = "MIT"
keywords = ["baduk", "parser", "sgf", "go"]
repository = "https://github.com/julianandrews/sgf-parse/"
readme = "README.md"
description = "A parser for the SGF file format for Go games"
documentation = "https://docs.rs/sgf-parse"
categories = ["data-structures", "parsing"]
